# ima-kb

./: .env.example  .gitignore  CODE_WIKI.md  CONTEST_POST.md  HANDOFF.md  INSTALL.md  config.py  ima-command.zsh  ima-desktop  ima-pet  install.sh  pyproject.toml  repl.py  requirements-desktop.txt  requirements.txt  run.py  stratified-silence-philosophy.md  优化诊断报告_2026-07-23.md
.workbuddy/memory/: 2026-07-20.md
cat-agent-showcase/: cat-agent-showcase.design  colors_and_type.css  orchestration-summary.json  validation-report.json
cat-agent-showcase/.preflight/: preflight.html
cat-agent-showcase/pages/: showcase-ambient.html  showcase-interactive.html  showcase.html
core/: __init__.py  storage.py
core/agent/: __init__.py  agent.py
core/analyze/: __init__.py  analyzer.py
core/classify/: __init__.py  tagger.py
core/cli/: __init__.py  chat.py  completer.py  constants.py  main.py  repl.py  terminal_helpers.py  welcome.py
core/desktop/: app.py  bridge.py  cli_sync.py  electron_bridge.py  ingest_helper.py  ipc.py  mobile_server.py  pet_wrapper.py  renderer.py  settings.py  states.py  tray.py  tray_runner.py  window.py
core/graph/: __init__.py  extractor.py  store.py  visualizer.py
core/image/: __init__.py  generator.py
core/ingestion/: __init__.py  chunker.py  parser.py  quick.py
core/llm/: __init__.py  client.py  degrade.py
core/memory/: __init__.py  (+6 more)
desktop-pet/: README.md  main.js  package-lock.json  package.json  preload.js  启动桌面宠物.command
docs/: DESKTOP_PET.md  PRD-web-backend.md
scripts/: eval_retrieval.py
services/: __init__.py  ingest_service.py  qa_service.py
test_data/: 向量检索示例.py  服务办理指南.docx  殡葬改革汇报.pptx  殡葬政策示例.md  殡葬服务收费.xlsx  项目复盘.txt
tests/: test_administrator_stream.py  test_batch3_fixes.py  test_cli_agent.py  test_cli_memory.py  test_cross_session_memory.py  test_graph_store.py  test_parser_ocr.py  test_pet_adopt_memory.py  test_pet_intent_shortcut.py  test_repl_aliases.py  test_sanitize_latex.py  test_search_config.py  test_search_config_integration.py  test_session_auto_save.py  test_storage_edit.py  test_storage_vector_sync.py  test_subcommand_menu.py
web/: __init__.py  app.py  pixel_theme.py
(+176 files in other folders)
