[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ima-kb"
version = "3.1.0"
description = "IMA 个人知识库：把电脑里散落的资料整理成可搜索、可问答的本机知识库"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "IMA" },
]
keywords = ["knowledge-base", "rag", "bm25", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# 运行时依赖（与 requirements.txt 保持一致）
dependencies = [
    "pandas>=2.0.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "markdown>=3.5.0",
    "trafilatura>=1.8.0",
    "openai>=1.12.0",
    "httpx>=0.27.0",
    "jieba>=0.42.1",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.0",
    "pydantic>=2.6.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# OCR 支持（可选，体积较大）
ocr = [
    "pytesseract>=0.3.10",
    # 还需要系统安装 tesseract：brew install tesseract tesseract-lang
]
# 开发工具
dev = [
    "pytest>=7.0",
    "build>=1.0",
]

[project.scripts]
# pip install -e . 后自动注册 ima 命令
ima = "run:cli"

[project.urls]
Homepage = "https://github.com/yourname/ima-kb"

[tool.setuptools]
# 显式指定包含哪些包（避免把 test_data、storage 误打包）
packages = ["core", "core.classify", "core.ingestion", "core.llm", "core.qa", "core.search",
    "core.retrieval", "core.memory", "core.persona", "core.pet", "core.pet.arts",
    "core.session", "core.sync", "core.analyze", "core.report", "core.reader",
    "core.agent", "core.graph", "core.classify", "core.ui",
    "web", "web.routes"]
# 根目录的顶层 .py 文件（run.py / repl.py / config.py）
py-modules = ["run", "repl", "config"]
# 包含非 Python 文件
include-package-data = true
